# Projet_CPOA

./: .gitignore  README.md  doge.pgm  doge2.pgm  doge3.pgm  doge4.pgm
ProjCPOA_Init/: CMakeLists.txt
ProjCPOA_Init-build/: CMakeCache.txt  Projet_Particules.cbp  cmake_install.cmake
ProjCPOA_Init-build/InterfaceCSG/: InterfaceCSG  InterfaceCSG.cbp  InterfaceCSG_automoc.cpp  cmake_install.cmake
ProjCPOA_Init-build/csg/: cmake_install.cmake  csg.cbp  main
ProjCPOA_Init-build/image/: cmake_install.cmake  image.cbp  test_image
ProjCPOA_Init-build/vectorMatrix/: cmake_install.cmake  vector_matrix.cbp
ProjCPOA_Init-build/vectorMatrix/tests/: cmake_install.cmake  test_array  test_mat  test_vec  test_vec_mat.cbp
ProjCPOA_Init/InterfaceCSG/: Array.h  Array.hpp  CMakeLists.txt  Image.h  Vec2.h  Vec2.hpp  Vec2V.cpp  Vec2V.h  VecVf.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderImg.cpp  renderImg.h
ProjCPOA_Init/csg/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  csgDisk.cpp  csgDisk.h  csgNode.cpp  csgNode.h  csgOperation.cpp  csgOperation.h  csgPrimitive.cpp  csgPrimitive.h  csgRegularPolygon.cpp  csgRegularPolygon.h  csgTree.cpp  csgTree.h  main.cpp
ProjCPOA_Init/image/: CMakeLists.txt  GradientSobel.cpp  GradientSobel.h  Image2D.h  Image2Grey.cpp  Image2Grey.h  Image2RGB.cpp  Image2RGB.h  imgGradient.cpp  test.ppm  test2.pgm  test2.ppm  test3.pgm  test4.pgm  test_image.cpp
ProjCPOA_Init/particle/: CMakeLists.txt  Fontaine.cpp  Fontaine.h  Particule.cpp  Particule.cpp.Fk2050  Particule.h
ProjCPOA_Init/vectorMatrix/: Array.h  Array.hpp  CMakeLists.txt  InvertMatrix.txt  Matrix33d.cpp  Matrix33d.h  Vector.h  Vector.hpp
ProjCPOA_Init/vectorMatrix/tests/: CMakeLists.txt  testArray.cpp  testMatrix.cpp  test_vec.cpp
